syntax = "proto3";
package wormhole_foundation.wormchain.wormhole;

option go_package = "github.com/wormhole-foundation/wormchain/x/wormhole/types";

message GuardianKey {

  bytes key = 1;
}
